# medical-image-segmentation-thesis

./: .gitignore  pyproject.toml  requirements.txt
docs/architecture_notes/: 01_dataset_explorer.md  02_dicom_reader.md  03_metadata_scanner.md  04_ground_truth_reader.md  05_mask_visualizer.md  06_overlay_visualizer.md  07_experiment_record.md  08_enums.md
docs/thesis_notes/: 01_Remember.md  02_Research_Roadmap.md
medical_image_segmentation_thesis.egg-info/: PKG-INFO  SOURCES.txt
scripts/: inspect_mask.py  run_metadata_scanner.py  test_dicom_reader.py  test_ground_truth_reader.py
src/core/: __init__.py  enums.py  experiment_comparison.py  experiment_record.py
src/data/: __init__.py  dataset_explorer.py  dicom_reader.py  ground_truth_reader.py  metadata_scanner.py
src/data/types/: mask_statistics.py
src/visualization/: base_visualizer.py  mask_visualizer.py  overlay_visualizer.py
tests/: test_mask_visualizer.py  test_metadata_scanner.py  test_overlay_visualizer.py
tests/core/: test_experiment_comparison.py  test_experiment_record.py  test_modality.py
tests/integration/: test_experiment_comparison_chaos.py
